// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Content should match snapshot 1`] = `
[
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://open.rocket.chat, john.doe"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  https://open.rocket.chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  john.doe
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://superlongservername.tologintoasuperlongservername.rocket.chat-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://superlongservername.tologintoasuperlongservername.rocket.chat"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://superlongservername.tologintoasuperlongservername.rocket.chat, very.long.username.here"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  https://superlongservername.tologintoasuperlongservername.rocket.chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  very.long.username.here
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://stable.rocket.chat-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://stable.rocket.chat"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://stable.rocket.chat, admin"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "test-file-stub",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  https://stable.rocket.chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  admin
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
]
`;

exports[`Story Snapshots: SwipeActions should match snapshot 1`] = `
[
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://open.rocket.chat, john.doe"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  https://open.rocket.chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  john.doe
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://example.com-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://example.com"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://example.com, user123"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  https://example.com
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  user123
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
]
`;

exports[`Story Snapshots: Themes should match snapshot 1`] = `
[
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://open.rocket.chat, john.doe"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  https://open.rocket.chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  john.doe
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#E1053C",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#E1053C",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#12402C"
          style={
            [
              {
                "backgroundColor": "#0A2417",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat"
          underlayColor="#12402C"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#12402C",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://open.rocket.chat, john.doe"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#F4FFF9",
                      },
                    ]
                  }
                >
                  https://open.rocket.chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#8FD9B8",
                      },
                    ]
                  }
                >
                  john.doe
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#E1053C",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 350,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#E1053C",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#0A2417"
          style={
            [
              {
                "backgroundColor": "#030C07",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="servers-history-https://open.rocket.chat"
          underlayColor="#0A2417"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#0A2417",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="https://open.rocket.chat, john.doe"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#F4FFF9",
                      },
                    ]
                  }
                >
                  https://open.rocket.chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#8FD9B8",
                      },
                    ]
                  }
                >
                  john.doe
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
]
`;
